--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -110,11 +110,11 @@ file_size_limit = "50MiB"
 # enabled = true
 
 # Uncomment to configure local storage buckets
-# [storage.buckets.images]
-# public = false
-# file_size_limit = "50MiB"
-# allowed_mime_types = ["image/png", "image/jpeg"]
-# objects_path = "./images"
+[storage.buckets.images]
+public = true
+file_size_limit = "4MiB"
+allowed_mime_types = ["image/png", "image/jpeg", "image/webp", "image/gif"]
+objects_path = "./images"
 
 [auth]
 enabled = true
